[package]
name = "bongo-cat"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ImUrX <urielfontan2002@gmail.com>"]
repository = "https://github.com/ImUrX/bongo-cat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "^1.2"
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4.0"
