[package]
name = "bongo-cat"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ImUrX <urielfontan2002@gmail.com>"]
repository = "https://github.com/ImUrX/bongo-cat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.2" }
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
lazy_static = "1.4.0"
device_query = { git = "https://github.com/ostrosco/device_query", rev = "7dcd4e5" }
